@@ -17,4 +17,4 @@
 #
 #       Author:  Vicent Mas - vmas@vitables.org
 
-__all__ = ["bookmarksDlg", "browserGUI", "helpBrowser"]
+__all__ = ["bookmarksdlg", "browsergui", "helpbrowser"]
